# cdm-sdk

./: .gitignore  README.md  pyproject.toml
src/python/: execution.py
src/python/BoardGames-CLI/: snakeLadder.py
src/python/main/: initialization.py  orders.py
src/python/resources/: config.conf
test/csv/: orders.csv
