[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdm-sdk"
version = "0.1.0"
description = "A tiny example Python package."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ashutosh Raichurkar", email = "you@example.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
